--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/favicon.png}">
 
-  <title>PetClinic :: a Spring Framework demonstration</title>
+  <title>School Management System :: Spring Framework</title>
 
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
-            <img src="../static/resources/images/spring-pivotal-logo.png"
+            <img src="../resources/images/spring-pivotal-logo.png"
               th:src="@{/resources/images/spring-pivotal-logo.png}" alt="Sponsored by Pivotal" /></div>
         </div>
       </div>
