--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -4,7 +4,7 @@
 
   <body>
 
-    <h2 th:text="#{welcome}">Welcome</h2>
+    <h2 th:text="#{welcome}">메타 대학교에 오신 것을 환영합니다.</h2>
     <div class="row">
         <div class="col-md-12">
           <img class="img-responsive" src="../static/resources/images/school_main.png" th:src="@{/resources/images/school_main.png}"/>
