--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -58,7 +58,7 @@
             <span>Home</span>
           </li>
 
-          <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find owners')">
+          <li th:replace="::menuItem ('/students/find','students','find students','search','Find students')">
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
             <span>Find owners</span>
           </li>
