--- a/src/main/resources/templates/students/findStudents.html
+++ b/src/main/resources/templates/students/findStudents.html
@@ -3,9 +3,9 @@
 
 <body>
 
-  <h2>Find Owners</h2>
+  <h2>Find Students</h2>
 
-  <form th:object="${owner}" th:action="@{/owners}" method="get" class="form-horizontal" id="search-owner-form">
+  <form th:object="${student}" th:action="@{/students}" class="form-horizontal" id="search-owner-form">
     <div class="form-group">
       <div class="control-group" id="lastNameGroup">
         <label class="col-sm-2 control-label">Last name </label>
@@ -21,8 +21,7 @@
     
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Find
-          Owner</button>
+        <button type="submit" class="btn btn-default">Find Student</button>
       </div>
     </div>
 
