Add Student 버튼 관련 기능 수정

--- a/src/main/resources/templates/students/findStudents.html
+++ b/src/main/resources/templates/students/findStudents.html
@@ -29,8 +29,9 @@
 
   </form>
 
-  <br />
-  <a class="btn btn-default" th:href="@{/owners/new}">Add Owner</a>
+  <br/>
+  
+  <a class="btn btn-default" th:href="@{/students/new}">Add Student</a>
 
 </body>
 </html>
