--- a/src/main/resources/templates/students/createOrUpdateStudentForm.html
+++ b/src/main/resources/templates/students/createOrUpdateStudentForm.html
@@ -4,7 +4,7 @@
 <body>
 
   <h2>Student</h2>
-  <form th:object="${owner}" class="form-horizontal" id="add-owner-form" method="post">
+  <form th:object="${student}" class="form-horizontal" id="add-owner-form" method="post">
     <div class="form-group has-feedback">
       <input
         th:replace="~{fragments/inputField :: input ('First Name', 'firstName', 'text')}" />
@@ -20,9 +20,8 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button
-          th:with="text=${owner['new']} ? 'Add Owner' : 'Update Owner'"
-          class="btn btn-default" type="submit" th:text="${text}">Add
-          Owner</button>
+          th:with="text=${student['new']} ? 'Add Student' : 'Update Student'"
+          class="btn btn-default" type="submit" th:text="${text}">Add Student</button>
       </div>
     </div>
   </form>
