--- a/src/main/resources/templates/students/studentsList.html
+++ b/src/main/resources/templates/students/studentsList.html
@@ -13,7 +13,7 @@
             <th style="width: 200px;">Address</th>
             <th>City</th>
             <th style="width: 120px">Telephone</th>
-            <th>Pets</th>
+            <th>Subjects</th>
         </tr>
         </thead>
         <tbody>
