--- a/src/main/resources/templates/students/studentDetails.html
+++ b/src/main/resources/templates/students/studentDetails.html
@@ -32,7 +32,7 @@
     <br />
     <br />
     <br />
-    <h2>Pets and Visits</h2>
+    <h2>Subjects and Lectures</h2>
   
     <table class="table table-striped">
   
