--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -2,15 +2,18 @@
 
 <html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
 
-  <body>
+<body>
+	<center>
 
-    <h2 th:text="#{welcome}">메타 대학교에 오신 것을 환영합니다.</h2>
-    <div class="row">
-        <div class="col-md-12">
-          <img class="img-responsive" src="../static/resources/images/school_main.png" th:src="@{/resources/images/school_main.png}"/>
-        </div>
-    </div>
+	<h2 th:text="#{welcome}">메타 대학교에 오신 것을 환영합니다.</h2>
+	<div class="row">
+		<div class="col-md-12">
+			<img class="img-responsive" src="../static/resources/images/school_main.png" th:src="@{/resources/images/school_main.png}" />
+		</div>
+	</div>
+	
+	</center>
 
-  </body>
+</body>
 
 </html>
