--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -66,7 +66,7 @@
             <span>Find owners</span>
           </li>
 
-          <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">
+          <li th:replace="::menuItem ('/teachers.html','teachers','teachers','th-list','Teachers')">
             <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
             <span>Veterinarians</span>
           </li>
