템플릿 폴더 students => student 로 변경

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -61,14 +61,14 @@
             <span>Home</span>
           </li>
 
-          <li th:replace="::menuItem ('/students/find','students','find students','search','Find students')">
+          <li th:replace="::menuItem ('/student/find','students','find students','search','Find students')">
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-            <span>Find owners</span>
+            <span>Find students</span>
           </li>
 
           <li th:replace="::menuItem ('/teachers.html','teachers','teachers','th-list','Teachers')">
             <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
-            <span>Veterinarians</span>
+            <span>Teachers</span>
           </li>
 
           <li
