--- a/src/main/resources/templates/student/findStudent.html
+++ b/src/main/resources/templates/student/findStudent.html
@@ -4,7 +4,7 @@
 <body>
   <h2>Find Students</h2>
 
-  <form th:object="${student}" th:action="@{/students}" class="form-horizontal" id="search-owner-form">
+  <form th:object="${student}" th:action="@{/student}" class="form-horizontal" id="search-owner-form">
     <div class="form-group">
       <div class="control-group" id="lastNameGroup">
         <label class="col-sm-2 control-label">Last name </label>
@@ -30,7 +30,7 @@
 
   <br/>
   
-  <a class="btn btn-default" th:href="@{/students/new}">Add Student</a>
+  <a class="btn btn-default" th:href="@{/student/new}">Add Student</a>
 
 </body>
 </html>
