템플릿 폴더 teachers => teacher 변경

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -66,7 +66,7 @@
             <span>Find students</span>
           </li>
 
-          <li th:replace="::menuItem ('/teachers.html','teachers','teachers','th-list','Teachers')">
+          <li th:replace="::menuItem ('/teacher.html','teachers','teachers','th-list','Teachers')">
             <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
             <span>Teachers</span>
           </li>
