--- a/src/main/resources/templates/student/studentDetail.html
+++ b/src/main/resources/templates/student/studentDetail.html
@@ -25,7 +25,7 @@
     </table>
   
     <a th:href="@{{id}/edit(id=${student.id})}" class="btn btn-default">Edit Student</a>
-    <a th:href="@{{id}/sbuject/new(id=${student.id})}" class="btn btn-default">Add New Subject</a>
+    <a th:href="@{{id}/subject/new(id=${student.id})}" class="btn btn-default">Add New Subject</a>
   
     <br />
     <br />
