--- a/src/main/resources/templates/subject/createOrUpdateLectureForm.html
+++ b/src/main/resources/templates/subject/createOrUpdateLectureForm.html
@@ -4,11 +4,10 @@
 <body>
 
   <h2>
-    <th:block th:if="${visit['new']}">New </th:block>
-    Visit
+    <th:block th:if="${lecture['new']}">New </th:block> Lecture
   </h2>
 
-  <b>Pet</b>
+  <b>Subject</b>
   <table class="table table-striped">
     <thead>
       <tr>
@@ -19,16 +18,16 @@
       </tr>
     </thead>
     <tr>
-      <td th:text="${pet.name}"></td>
+      <td th:text="${subject.name}"></td>
       <td
-        th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}"></td>
-      <td th:text="${pet.type}"></td>
+        th:text="${#temporals.format(subject.birthDate, 'yyyy-MM-dd')}"></td>
+      <td th:text="${subject.subjectType}"></td>
       <td
-        th:text="${pet.owner?.firstName + ' ' + pet.owner?.lastName}"></td>
+        th:text="${subject.student?.firstName + ' ' + subject.student?.lastName}"></td>
     </tr>
   </table>
 
-  <form th:object="${visit}" class="form-horizontal" method="post">
+  <form th:object="${lecture}" class="form-horizontal" method="post">
     <div class="form-group has-feedback">
       <input
         th:replace="~{fragments/inputField :: input ('Date', 'date', 'date')}"  />
@@ -38,22 +37,22 @@
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <input type="hidden" name="petId" th:value="${pet.id}" />
-        <button class="btn btn-default" type="submit">Add Visit</button>
+        <input type="hidden" name="subjectId" th:value="${subject.id}" />
+        <button class="btn btn-default" type="submit">Add Lecture</button>
       </div>
     </div>
   </form>
 
   <br />
-  <b>Previous Visits</b>
+  <b>Previous Lectures</b>
   <table class="table table-striped">
     <tr>
       <th>Date</th>
       <th>Description</th>
     </tr>
-    <tr th:if="${!visit['new']}" th:each="visit : ${pet.visits}">
-      <td th:text="${#temporals.format(visit.date, 'yyyy-MM-dd')}"></td>
-      <td th:text=" ${visit.description}"></td>
+    <tr th:if="${!lecture['new']}" th:each="lecture : ${subject.lectures}">
+      <td th:text="${#temporals.format(lecture.date, 'yyyy-MM-dd')}"></td>
+      <td th:text=" ${lecture.description}"></td>
     </tr>
   </table>
 
