--- a/src/main/resources/templates/student/studentDetail.html
+++ b/src/main/resources/templates/student/studentDetail.html
@@ -60,7 +60,7 @@
             </tr>
             <tr>
               <td><a th:href="@{{studentId}/subject/{subjectId}/edit(studentId=${student.id},subjectId=${subject.id})}">Edit Subject</a></td>
-              <td><a th:href="@{{studentId}/subject/{subjectId}/lectures/new(studentId=${student.id},subjectId=${subject.id})}">Add Lecture</a></td>
+              <td><a th:href="@{{studentId}/subject/{subjectId}/lecture/new(studentId=${student.id},subjectId=${subject.id})}">Add Lecture</a></td>
             </tr>
           </table>
         </td>
