--- a/src/main/resources/templates/student/studentDetail.html
+++ b/src/main/resources/templates/student/studentDetail.html
@@ -54,7 +54,7 @@
                 <th>Description</th>
               </tr>
             </thead>
-            <tr th:each="letcture : ${subject.lectures}">
+            <tr th:each="lecture : ${subject.lectures}">
               <td th:text="${#temporals.format(lecture.date, 'yyyy-MM-dd')}"></td>
               <td th:text="${lecture?.description}"></td>
             </tr>
