메뉴 하이라이트 수정

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -61,12 +61,12 @@
             <span>Home</span>
           </li>
 
-          <li th:replace="::menuItem ('/student/find','students','find students','search','Find students')">
+          <li th:replace="::menuItem ('/student/find','student','find students','search','Find students')">
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
             <span>Find students</span>
           </li>
 
-          <li th:replace="::menuItem ('/teacher.html','teachers','teachers','th-list','Teachers')">
+          <li th:replace="::menuItem ('/teacher.html','teacher','teachers','th-list','Teachers')">
             <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
             <span>Teachers</span>
           </li>
