--- a/src/main/resources/templates/student/studentDetail.html
+++ b/src/main/resources/templates/student/studentDetail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
+  th:replace="~{fragments/layout :: layout (~{::body},'student')}">
 
   <body>
     <h2>Student Information</h2>
