--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -13,10 +13,11 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   
-  <link rel="stylesheet" th:href="@{/resources/css/petclinic.css}" />
-  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
   <!-- 
+  <link rel="stylesheet" th:href="@{/resources/css/petclinic.css}" />
+  
+  
   <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
   <script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
    -->
@@ -39,84 +40,47 @@
 
 <body>
 
-  <nav class="navbar navbar-default" role="navigation">
-  
-    <div class="container">
-    
-      <div class="navbar-header">
-        <a class="navbar-brand" th:href="@{/}"><span></span></a>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
-          <span class="sr-only">
-            <os-p>Toggle navigation</os-p>
-          </span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      
-      <div class="navbar-collapse collapse" id="main-navbar">
+	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+		<div class="container-fluid">
+			&nbsp;&nbsp;&nbsp;
+			<a class="navbar-brand" href="#" th:href="@{/}">Home</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarCollapse">
+				<ul class="navbar-nav me-auto mb-2 mb-md-0">
+					<li class="nav-item"><a class="nav-link active" aria-current="page" href="#" th:href="@{/student/find}">Find Students</a></li>
+					<li class="nav-item"><a class="nav-link" href="#" th:href="@{/teacher.html}">Teachers</a></li>
+					<li class="nav-item"><a class="nav-link" href="#" th:href="@{/oups}">Error</a></li>					
+				</ul>
+				<form class="d-flex">
+					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Search</button>
+				</form>
+			</div>
+		</div>
+	</nav>
 
-        <ul class="nav navbar-nav navbar-right" th:remove="all">
+	<br/>
+	<br/>
+	
+	<main class="container">
+		<div class="row bg-light p-5 rounded">
+			<th:block th:include="${template}" />
+			<!-- 
+			<h1>Navbar example</h1>
+			<p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works.</p>
+			 -->			
+		</div>
 
-          <li th:fragment="menuItem (link,active,title,glyph,text)" class="active"
-            th:class="${active==menu ? 'active' : ''}">
-            <a th:href="@{__${link}__}" th:title="${title}">
-              <span th:class="'glyphicon  glyphicon-'+${glyph}" class="glyphicon glyphicon-home"
-                aria-hidden="true"></span>
-              <span th:text="${text}">Template</span>
-            </a>
-          </li>
-
-        </ul>
-
-        <ul class="nav navbar-nav navbar-right">
-
-          <li th:replace="::menuItem ('/','home','home page','home','Home')">
-            <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-            <span>Home</span>
-          </li>
-
-          <li th:replace="::menuItem ('/student/find','student','find students','search','Find students')">
-            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-            <span>Find students</span>
-          </li>
-
-          <li th:replace="::menuItem ('/teacher.html','teacher','teachers','th-list','Teachers')">
-            <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
-            <span>Teachers</span>
-          </li>
-
-          <li
-            th:replace="::menuItem ('/oups','error','trigger a RuntimeException to see how it is handled','warning-sign','Error')">
-            <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
-            <span>Error</span>
-          </li>
-
-        </ul>
-        
-      </div>
-      
-    </div>
-    
-  </nav>
-  
-  <div class="container-fluid">
-    <div class="container xd-container">
-
-      <th:block th:include="${template}" />
-
-      <br />
-      <br />
-      <div class="container">
-        <div class="row">
-          <div class="col-12 text-center">
-            <img src="../resources/images/spring-pivotal-logo.png"
-              th:src="@{/resources/images/spring-pivotal-logo.png}" alt="Sponsored by Pivotal" /></div>
-        </div>
-      </div>
-    </div>
-  </div>  
+		<div class="row">
+			<div class="col-12 text-center">
+				<img src="../resources/images/spring-pivotal-logo.png" 
+				th:src="@{/resources/images/spring-pivotal-logo.png}" 
+				alt="Sponsored by Pivotal" />
+			</div>
+		</div>
+	</main>
 
 </body>
 
