--- a/src/main/resources/templates/student/findStudent.html
+++ b/src/main/resources/templates/student/findStudent.html
@@ -2,35 +2,37 @@
   th:replace="~{fragments/layout :: layout (~{::body}, 'student')}">
 
 <body>
-  <h2>Find Students</h2>
-
-  <form th:object="${student}" th:action="@{/student}" class="form-horizontal" id="search-owner-form">
-    <div class="form-group">
-      <div class="control-group" id="lastNameGroup">
-        <label class="col-sm-2 control-label">Last name </label>
-        <div class="col-sm-10">
-          <input class="form-control" th:field="*{lastName}" size="30"
-            maxlength="80" />
-          <span class="help-inline">
-            <div th:if="${#fields.hasAnyErrors()}">
-              <p th:each="err : ${#fields.allErrors()}" th:text="${err}">Error</p>
-            </div>
-          </span>
-        </div>
-      </div>
-    </div>   
-    
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Find Student</button>
-      </div>
-    </div>
-
-  </form>
-
-  <br/>
+	<h2>Find Students</h2>
+	
+	<br/>
+	<br/>
+	<br/>
   
-  <a class="btn btn-default" th:href="@{/student/new}">Add Student</a>
+	<form th:object="${student}" th:action="@{/student}" id="search-owner-form" >
+		<div class="mb-3">
+			<label for="lastName" class="form-label">Student Last Name</label>
+			<input type="text" class="form-control" id="lastName" aria-describedby="lastName"
+				size="30" maxlength="80"
+				th:field="*{lastName}" 
+			/>
+			<span class="help-inline">
+	            <div th:if="${#fields.hasAnyErrors()}">
+	              <p th:each="err : ${#fields.allErrors()}" th:text="${err}">Error</p>
+	            </div>
+	        </span>
+			<div id="lastName" class="form-text">Last Name</div>
+		</div> 
+		<button type="submit" class="btn btn-primary">Find Student</button>
+	</form>
+
+	<br/>
+	
+	<div class="container mt-3">	
+		<a type="button" class="btn btn-outline-primary btn-default" 
+			th:href="@{/student/new}" >
+			Add Student
+		</a>
+	</div> 
 
 </body>
 </html>
