--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -14,13 +14,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- 
-  <link rel="stylesheet" th:href="@{/resources/css/petclinic.css}" />
-  
-  
-  <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-  <script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
-   -->
   
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">        
@@ -38,17 +31,19 @@
 
 </head>
 
-<body>
+<body> 
 
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 		<div class="container-fluid">
 			&nbsp;&nbsp;&nbsp;
 			<a class="navbar-brand" href="#" th:href="@{/}">Home</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" 
+				aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
+
 			<div class="collapse navbar-collapse" id="navbarCollapse">
-				<ul class="navbar-nav me-auto mb-2 mb-md-0">
+				<ul class="navbar-nav me-auto mb-2 mb-md-0"> 
 					<li class="nav-item">
 						<a  class="nav-link" th:class="${ menu == 'student' ? 'nav-link active' : 'nav-link'}" 
 							th:href="@{/student/find}">
@@ -93,6 +88,10 @@
 				alt="Sponsored by Pivotal" />
 			</div>
 		</div>
+		
+		<br/>
+		<br/>
+		
 	</main>
 
 </body>
