--- a/src/main/resources/templates/student/studentDetail.html
+++ b/src/main/resources/templates/student/studentDetail.html
@@ -6,67 +6,88 @@
   <body>
     <h2>Student Information</h2>
     <table class="table table-striped" th:object="${student}">
-      <tr>
-        <th>Name</th>
-        <td><b th:text="*{firstName + ' ' + lastName}"></b></td>
-      </tr>
-      <tr>
-        <th>Address</th>
-        <td th:text="*{address}"></td> 
-      </tr>
-      <tr>
-        <th>City</th>
-        <td th:text="*{city}"></td>
-      </tr>
-      <tr>
-        <th>Telephone</th>
-        <td th:text="*{telephone}"></td>
-      </tr>
-    </table>
+		<tbody>
+			<tr>
+				<th>Name</th>
+				<td><b th:text="*{firstName + ' ' + lastName}"></b></td>
+			</tr>
+			<tr>
+				<th>Address</th>
+				<td th:text="*{address}"></td>
+			</tr>
+			<tr>
+				<th>City</th>
+				<td th:text="*{city}"></td>
+			</tr>
+			<tr>
+				<th>Telephone</th>
+				<td th:text="*{telephone}"></td>
+			</tr>
+		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="100%">
+					<a type="button" class="btn btn-outline-primary btn-default" th:href="@{{id}/edit(id=${student.id})}" >
+				    	Edit Student
+				    </a>
+				    <a type="button" class="btn btn-outline-primary btn-default" th:href="@{{id}/subject/new(id=${student.id})}">
+				    	Add New Subject
+				    </a>
+				</td>
+			</tr>
+		</tfoot>
+	</table>
   
-    <a th:href="@{{id}/edit(id=${student.id})}" class="btn btn-default">Edit Student</a>
-    <a th:href="@{{id}/subject/new(id=${student.id})}" class="btn btn-default">Add New Subject</a>
-  
-    <br />
-    <br />
-    <br />
+    
+    <h2>&nbsp;</h2>
     <h2>Subjects and Lectures</h2>
   
     <table class="table table-striped">
-  
-      <tr th:each="subject : ${student.subjects}">
-        <td valign="top">
-          <dl class="dl-horizontal">
-            <dt>Name</dt>
-            <dd th:text="${subject.name}"></dd>
-            <dt>Birth Date</dt>
-            <dd
-              th:text="${#temporals.format(subject.birthDate, 'yyyy-MM-dd')}"></dd>
-            <dt>Type</dt>
-            <dd th:text="${subject.subjectType}"></dd>
-          </dl>
-        </td>
-        <td valign="top">
-          <table class="table-condensed"> 
-            <thead>
-              <tr>
-                <th>Visit Date</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-            <tr th:each="lecture : ${subject.lectures}">
-              <td th:text="${#temporals.format(lecture.date, 'yyyy-MM-dd')}"></td>
-              <td th:text="${lecture?.description}"></td>
-            </tr>
-            <tr>
-              <td><a th:href="@{{studentId}/subject/{subjectId}/edit(studentId=${student.id},subjectId=${subject.id})}">Edit Subject</a></td>
-              <td><a th:href="@{{studentId}/subject/{subjectId}/lecture/new(studentId=${student.id},subjectId=${subject.id})}">Add Lecture</a></td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-  
-    </table>
+		<tbody>
+			<tr th:each="subject : ${student.subjects}">
+				<td valign="top">
+					<dl class="dl-horizontal">
+						<dt>Name</dt>
+						<dd th:text="${subject.name}"></dd>
+						<dt>Birth Date</dt>
+						<dd th:text="${#temporals.format(subject.birthDate, 'yyyy-MM-dd')}"></dd>
+						<dt>Type</dt>
+						<dd th:text="${subject.subjectType}"></dd>
+					</dl>
+				</td>
+				<td valign="top">
+					<table class="table-condensed">
+						<thead>
+							<tr>
+								<th>Visit Date</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="lecture : ${subject.lectures}">
+								<td th:text="${#temporals.format(lecture.date, 'yyyy-MM-dd')}"></td>
+								<td th:text="${lecture?.description}"></td>
+							</tr>
+							<tr>
+								<td>
+									<a type="button" class="btn btn-outline-primary btn-sm"
+										th:href="@{{studentId}/subject/{subjectId}/edit(studentId=${student.id},subjectId=${subject.id})}">
+										Edit Subject
+									</a>
+								</td>
+								<td>
+									<a type="button" class="btn btn-outline-primary btn-sm"
+										th:href="@{{studentId}/subject/{subjectId}/lecture/new(studentId=${student.id},subjectId=${subject.id})}">
+										Add Lecture
+									</a>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</td>
+			</tr>
+		</tbody>
+	</table>
   
   </body>
 
