edit subject 관련 일부 수정

--- a/src/main/resources/templates/teacher/teacherList.html
+++ b/src/main/resources/templates/teacher/teacherList.html
@@ -5,26 +5,30 @@
 
 <body>
 
-  <h2>Teachers</h2>
+  	<h2>Teachers</h2>
 
-  <table id="teachers" class="table table-striped">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Specialties</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr th:each="teacher : ${teachers.teacherList}">
-        <td th:text="${teacher.firstName + ' ' + teacher.lastName}"></td>
-        <td>
-        	<span th:each="specialty : ${teacher.specialties}"
-          		  th:text="${specialty.name + ' '}" ></span> 
-          	<span th:if="${teacher.nrOfSpecialties == 0}">none</span>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  
+	<table id="teachers" class="table table-striped table-hover">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Specialties</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="teacher : ${teachers.teacherList}">
+				<td th:text="${teacher.firstName + ' ' + teacher.lastName}"></td>
+				<td>
+					<span th:each="specialty : ${teacher.specialties}" 
+						th:text="${specialty.name + ' '}">
+						Specialty
+					</span>
+					<span th:if="${teacher.nrOfSpecialties == 0}">
+						noOfSpecialites
+					</span>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+
 </body>
 </html>
