--- a/src/main/resources/templates/student/studentList.html
+++ b/src/main/resources/templates/student/studentList.html
@@ -6,15 +6,15 @@
 
     <h2> Students </h2>
 
-    <table id="owners" class="table table-striped">
+    <table id="students" class="table table-striped table-hover">
         <thead>
-        <tr>
-            <th style="width: 150px;">Name</th>
-            <th style="width: 200px;">Address</th>
-            <th>City</th>
-            <th style="width: 120px">Telephone</th>
-            <th>Subjects</th>
-        </tr>
+	        <tr>
+	            <th style="width: 150px;">Name</th>
+	            <th style="width: 200px;">Address</th>
+	            <th>City</th>
+	            <th style="width: 120px">Telephone</th>
+	            <th>Subjects</th>
+	        </tr>
         </thead>
         <tbody>
           <tr th:each="student : ${selections}">
