--- a/src/main/resources/templates/subject/createOrUpdateSubjectForm.html
+++ b/src/main/resources/templates/subject/createOrUpdateSubjectForm.html
@@ -4,30 +4,33 @@
 
 <body>
 	<h2>
-		<th:block th:if="${subject['new']}">New</th:block> Subject
+		<th:block th:if="${subject['new']}">New</th:block> Subject 
 	</h2>
+	
+	<h4>&nbsp;</h4>
 	
 	<form th:object="${subject}" class="form-horizontal" method="post">
 		<input type="hidden" name="id" th:value="*{id}" />
+		
 		<div class="form-group has-feedback">
 			<div class="form-group">
-				<label class="col-sm-2 control-label">Owner</label>
-				<div class="col-sm-10">
-					<span th:text="${subject.student?.firstName + ' ' + subject.student?.lastName}"></span>
-				</div>
+				<label >Student : </label>
+				<span th:text="${subject.student?.firstName + ' ' + subject.student?.lastName}"></span>
 			</div>
+			
+			<br/>
+			
 			<input th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}" />
 			<input th:replace="~{fragments/inputField :: input ('Birth Date', 'birthDate', 'date')}" />
 			<input th:replace="~{fragments/selectField :: select ('Type', 'subjectType', ${subjectTypes})}" />
 		</div>
-		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<button class="btn btn-default" type="submit" 
-					th:with="text=${subject['new']} ? 'Add Subject' : 'Update Subject'" th:text="${text}" >
-					Add Subject
-				</button>
-			</div>
-		</div>
+		
+		<br/>
+		
+		<button class="btn btn-primary" type="submit" 
+			th:with="text=${subject['new']} ? 'Add Subject' : 'Update Subject'" th:text="${text}" >
+			Add Subject
+		</button>
 	</form>
 
 </body>
