--- a/src/main/resources/templates/teacher/teacherList.html
+++ b/src/main/resources/templates/teacher/teacherList.html
@@ -23,7 +23,7 @@
 						Specialty
 					</span>
 					<span th:if="${teacher.nrOfSpecialties == 0}">
-						noOfSpecialites
+						None
 					</span>
 				</td>
 			</tr>
